Adds loading utilities and a year of data