@@ -3,5 +3,9 @@
   :url "http://example.com/FIXME"
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
-  :dependencies [[org.clojure/clojure "1.10.1"]]
-  :repl-options {:init-ns sentencing.core})
+  :dependencies [[com.clojure-goes-fast/clj-memory-meter "0.1.3"]
+                 [org.clojure/clojure "1.10.1"]
+                 [org.clojure/data.csv "1.0.0"]
+                 [squeezer "0.4.0"]]
+  :repl-options {:init-ns sentencing.core}
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"])
